Fix path for play again button.

--- a/pages/ending-quiz.html
+++ b/pages/ending-quiz.html
@@ -25,7 +25,7 @@
                 </div>
             </form>
             <div class="quiz-form-actions">
-                <a href="../quiz.html" class="btn light-blue__outlined">
+                <a href="../pages/quiz.html" class="btn light-blue__outlined">
                     Jugar de nuevo
                 </a>
                 <a href="../index.html" class="btn yellow__filled">
