--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
 </head>
 <body>
     <div class="container home">
-        <div id="home">
-            <div class="home-title">
-                <h1>Bienvenidos a</h1>
-                <img src="./src/assets/logo-quizscript.svg" class="welcome-img" alt="Bienvenidos a QuizScript!">   
+        <div class="inner-container">
+            <div id="home">
+                <div class="home-title">
+                    <h1>Bienvenidos a</h1>
+                    <img src="./src/assets/logo-quizscript.svg" class="welcome-img" alt="Bienvenidos a QuizScript!">   
+                </div>
+                <div class="home-actions">
+                    <a href="../pages/quiz.html" id="start-game" class="btn light-blue__outlined">
+                        Nueva partida
+                    </a>
+                    <a href="../pages/highscores.html" id="highscore" class="btn yellow__filled">
+                        Puntuaciones
+                    </a>
+                </div>
             </div>
-            <div class="home-actions">
-                <a href="../pages/quiz.html" id="start-game" class="btn light-blue__outlined">
-                    Nueva partida
+            <footer>
+                <p>Codeado con mucha paciencia por Francisco Melo</p>
+                <a href="https://www.github.com/MeloCreativo" target="_blank" rel="noopener">
+                    <i class="fa fa-github"></i>
                 </a>
-                <a href="../pages/highscores.html" id="highscore" class="btn yellow__filled">
-                    Puntuaciones
-                </a>
-            </div>
+            </footer>
         </div>
-        <footer>
-            <p>Codeado con mucha paciencia por Francisco Melo</p>
-            <a href="https://www.github.com/MeloCreativo" target="_blank" rel="noopener">
-                <i class="fa fa-github"></i>
-            </a>
-        </footer>
     </div>
 </body>
 </html>
