Add styles and layout for categories page.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <img src="./src/assets/logo-quizscript.svg" class="welcome-img" alt="Bienvenidos a QuizScript!">   
                 </div>
                 <div class="home-actions">
-                    <a href="../pages/quiz.html" id="start-game" class="btn light-blue__outlined">
+                    <a href="../pages/categories.html" id="start-game" class="btn light-blue__outlined">
                         Nueva partida
                     </a>
                     <a href="../pages/highscores.html" id="highscore" class="btn yellow__filled">
