--- a/pages/ending-quiz.html
+++ b/pages/ending-quiz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../src/styles/css/normalize.css">
     <link rel="stylesheet" href="../src/styles/css/styles.css">
     <script src="https://kit.fontawesome.com/43aad429ed.js" crossorigin="anonymous"></script>
     <title>QuizScript - ¡Haz finalizado la partida!</title>
