Add categories questions an logic to it.

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -15,22 +15,22 @@
             <img src="../src/assets/logo-quizscript.svg" alt="QuizScript">
             <h1>Selecciona una categoría y comienza a jugar</h1>
             <div id="category-grid">
-                <a class="category-card violet" href="../pages/quiz.html">
+                <a class="category-card violet" href="../pages/quiz.html?category=html">
                     HTML
                 </a>
-                <a class="category-card green" href="../pages/quiz.html">
+                <a class="category-card green" href="../pages/quiz.html?category=css">
                     CSS
                 </a>
-                <a class="category-card yellow" href="../pages/quiz.html">
+                <a class="category-card yellow" href="../pages/quiz.html?category=javascript">
                     Javascript
                 </a>
-                <a class="category-card light-blue" href="../pages/quiz.html">
+                <a class="category-card light-blue" href="../pages/quiz.html?category=python">
                     Python
                 </a>
-                <a class="category-card dark-violet" href="../pages/quiz.html">
+                <a class="category-card dark-violet" href="../pages/quiz.html?category=react">
                     React
                 </a>
-                <a class="category-card orange" href="../pages/quiz.html">
+                <a class="category-card orange" href="../pages/quiz.html?category=c">
                     C++
                 </a>
             </div>
