--- a/pages/ending-quiz.html
+++ b/pages/ending-quiz.html
@@ -27,7 +27,7 @@
                     </div>
                 </form>
                 <div class="quiz-form-actions">
-                    <a href="../pages/quiz.html" class="btn light-blue__outlined">
+                    <a href="../pages/categories.html" class="btn light-blue__outlined">
                         Jugar de nuevo
                     </a>
                     <a href="../index.html" class="btn yellow__filled">
