Add basic layout for aadding questions form.

--- a/pages/add-question.html
+++ b/pages/add-question.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../src/styles/css/styles.css">
     <script src="https://kit.fontawesome.com/43aad429ed.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <title>QuizScript - Selecciona una categoría</title>
+    <title>QuizScript - Agrega una pregunta</title>
 </head>
 <body>
     <div class="container categories">
@@ -16,31 +16,11 @@
             <a href="/index.html">
                 <img src="../src/assets/logo-quizscript.svg" id="logo" alt="QuizScript">                
             </a>
-            <h1>Selecciona una categoría y comienza a jugar</h1>
-            <div id="category-grid">
-                <a class="category-card violet" href="../pages/quiz.html?category=html">
-                    HTML
-                </a>
-                <a class="category-card green" href="../pages/quiz.html?category=css">
-                    CSS
-                </a>
-                <a class="category-card yellow" href="../pages/quiz.html?category=javascript">
-                    Javascript
-                </a>
-                <a class="category-card light-blue" href="../pages/quiz.html?category=python">
-                    Python
-                </a>
-                <a class="category-card dark-violet" href="../pages/quiz.html?category=react">
-                    React
-                </a>
-                <a class="category-card orange" href="../pages/quiz.html?category=c">
-                    C++
-                </a>
-            </div>
-            <div class="add-question">
-                <a href="./add-question.html" class="btn yellow__filled">
-                    <span>+ </span>Agregar una pregunta
-                </a>
+            <h1>Agrega una pregunta a la categoría que desees</h1>
+            <div>
+                <form action="">
+                    <input type="select">
+                </form>
             </div>
             <footer>
                 <p>Codeado con mucha paciencia por Francisco Melo</p>
