Add form logic.

--- a/pages/add-question.html
+++ b/pages/add-question.html
@@ -45,8 +45,11 @@
                         <option value="3">3</option>
                         <option value="4">4</option>
                     </select>
-                    <input class="btn light-blue__outlined" type="submit" id="save" value="Agregar pregunta" disabled>
+                    <input class="btn light-blue__outlined" onclick="myFunc()" type="submit" id="save" value="Agregar pregunta" disabled>
                 </form>
+                <div id="hidden_div" style="display: none;">
+                    <p>Hola</p>
+                </div>
             </div>
             <footer>
                 <p>Codeado con mucha paciencia por Francisco Melo</p>
