--- a/pages/add-question.html
+++ b/pages/add-question.html
@@ -28,7 +28,7 @@
                       <option value="react">React</option>
                       <option value="c++">C++</option>
                     </select>
-                    <label for="question">Ingresa la pregunta:</label>
+                    <label for="question">Ingresa la pregunta o consigna:</label>
                     <input type="text" name="question" id="new-question" placeholder="Ej: ¿Quién fue el creador de Quiz Script?" required>
                     <label for="correct-answer">Ingresa respuesta correcta:</label>
                     <input type="text" name="choice1" id="correct-answer" placeholder="Ej: Francisco Melo" required>
@@ -45,10 +45,12 @@
                         <option value="3">3</option>
                         <option value="4">4</option>
                     </select>
-                    <input class="btn light-blue__outlined" onclick="myFunc()" type="submit" id="save" value="Agregar pregunta" disabled>
+                    <input class="btn light-blue__outlined" type="submit" id="save" value="Agregar pregunta" disabled>
                 </form>
-                <div id="hidden_div" style="display: none;">
-                    <p>Hola</p>
+                <div id="hidden_div" class="success-alert" style="display: none;">
+                    <i class="fa fa-check"></i>
+                    <p>¡Genial! Tu pregunta se ha guardado correctamente<br>
+                    Continua agregando preguntas o <a href="/index.html" target="_self">vuelve al inicio</a>.</p>
                 </div>
             </div>
             <footer>
