Fix page titles and add favicon.

--- a/pages/ending-quiz.html
+++ b/pages/ending-quiz.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/styles/css/normalize.css">
     <link rel="stylesheet" href="../src/styles/css/styles.css">
+    <link rel="shortcut icon" href="/src/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/src/assets/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/43aad429ed.js" crossorigin="anonymous"></script>
     <title>QuizScript - ¡Haz finalizado la partida!</title>
 </head>
