--- a/pages/add-question.html
+++ b/pages/add-question.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/styles/css/normalize.css">
     <link rel="stylesheet" href="../src/styles/css/styles.css">
+    <link rel="shortcut icon" href="/src/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/src/assets/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/43aad429ed.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>QuizScript - Agrega una pregunta</title>
