--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/styles/css/normalize.css">
     <link rel="stylesheet" href="../src/styles/css/styles.css">
+    <link rel="shortcut icon" href="/src/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/src/assets/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/43aad429ed.js" crossorigin="anonymous"></script>
-    <title>QuizScript - Start Game</title>
+    <title>QuizScript - Comenzar juego</title>
 </head>
 <body>
     <div class="container">
